--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "src": "*.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "*.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
