--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,14 @@
 {
   "builds": [
     {
+      "src": "src",
       "use": "@vercel/python",
       "config": {
         "installCommand": "python -m pip install -e ."
       }
     },
     {
+      "src": "src-frontend",
       "use": "@vercel/node",
       "config": {
         "installCommand": "corepack enable && yarn",
