--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,20 @@
 {
   "builds": [
     {
-      "src": "src",
+      "src": "pyproject.toml",
       "use": "@vercel/python",
       "config": {
-        "installCommand": "python -m pip install -e ."
+        "installCommand": "python -m pip install -e .",
+        "outputDirectory": "src"
       }
     },
     {
-      "src": "src-frontend",
+      "src": "package.json",
       "use": "@vercel/node",
       "config": {
         "installCommand": "corepack enable && yarn",
-        "buildCommand": "node --run build"
+        "buildCommand": "node --run build",
+        "outputDirectory": "dist"
       }
     }
   ],
