--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "use": "@vercel/python",
       "config": {
         "installCommand": "python -m pip install -e .",
-        "outputDirectory": "src"
+        "outputDirectory": "/src"
       }
     },
     {
@@ -14,7 +14,7 @@
       "config": {
         "installCommand": "corepack enable && yarn",
         "buildCommand": "node --run build",
-        "outputDirectory": "dist"
+        "outputDirectory": "/dist"
       }
     }
   ],
