--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "packageManager": "yarn@4.6.0",
   "scripts": {
     "dll": "cross-env NODE_ENV=development milktea-esm dll",
-    "start": "npm run clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max_old_space_size=4096\" milktea-esm start",
-    "build": "npm run clean && cross-env NODE_ENV=production milktea-esm build",
+    "start": "node --run clean && cross-env NODE_ENV=development NODE_OPTIONS=\"--max_old_space_size=4096\" milktea-esm start",
+    "build": "node --run clean && cross-env NODE_ENV=production milktea-esm build",
+    "build:vercel": "node --run build && rimraf .vercel/** && node scripts/vercelBuild.mjs",
+    "build:vercel:nr": "node --run build && node scripts/vercelBuild.mjs",
     "clean": "rimraf dist",
     "eslint": "cross-env COMMITLINT=1 eslint ./ --fix --cache --cache-location .eslintcache --no-warn-ignored",
     "eslint:no-fix": "cross-env COMMITLINT=1 eslint ./ --cache --cache-location .eslintcache --no-warn-ignored",
@@ -44,6 +46,7 @@
     "lint-staged": "^15.4.1",
     "postcss-loader": "^8.1.1",
     "rimraf": "^6.0.1",
+    "smol-toml": "^1.3.1",
     "tailwindcss": "^3.4.0",
     "ts-loader": "^9.5.2",
     "typescript": "^5.7.3",
