chore: 修改vercel的配置

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/python"
+        }
+      ]
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)\\.html",
