--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,18 @@
 {
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node",
+      "config": {
+        "installCommand": "corepack enable && yarn",
+        "buildCommand": "node --run build:vercel"
+      }
+    },
+    {
+      "src": "api/boot/wsgi.py",
+      "use": "@vercel/python"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)\\.html",
